# sanipy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  basic_usage.py  classification_example.py  comparison_example.py  messy_classification.csv  regression_example.py  test_classification.csv  train_classification.csv
notebooks/: sanipy_telco_customer_churn_demo.ipynb
src/sanipy/: __init__.py  __main__.py  api.py  cli.py  comparison.py  comparison_reports.py  config.py  core.py  diagnostics.py  exceptions.py  issues.py  report.py  reports.py
src/sanipy/_checks/: __init__.py  categorical_cardinality.py  constant_features.py  correlations.py  dataset_overview.py  distribution_shape.py  duplicate_rows.py  identifier_columns.py  leakage_risk.py  missing_values.py  outlier_detection.py  target_analysis.py
src/sanipy/_comparison/: __init__.py  runner.py
src/sanipy/_engine/: __init__.py  context.py  runner.py
src/sanipy/_utils/: __init__.py  dataframe_ops.py  text_formatting.py  type_detection.py
tests/: __init__.py  conftest.py  test_cardinality.py  test_cli.py  test_cli_compare.py  test_comparison.py  test_comparison_edge_cases.py  test_config.py  test_constants.py  test_correlation.py  test_diagnostics.py  test_duplicates.py  test_edge_cases.py  test_id_columns.py  test_integration.py  test_issues.py  test_leakage.py  test_missing.py  test_outliers.py  test_overview.py  test_patch_fixes.py  test_report.py  test_reports.py  test_skewness.py  test_target.py
(+13 files in other folders)
