[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanipy"
version = "0.1.0a1"
description = "Lightweight sanity checks for ML datasets."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sanipy Contributors" },
]
keywords = [
    "machine-learning",
    "data-quality",
    "sanity-check",
    "dataset",
    "pandas",
    "data-validation",
    "ml-pipeline",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/anormalguy96/sanipy"
Repository = "https://github.com/anormalguy96/sanipy"
Issues = "https://github.com/anormalguy96/sanipy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
